<resources>
    <string name="app_name">iART</string>
    <string name="readPainting">Painting</string>
    <string name="notAvailable">Not Available</string>
    <string name="painting_name">Art-work Name:\u0020</string>
    <string name="artist_name">Artist Name:</string>
    <string name="year_created">Year Created:</string>
    <string name="culture">Culture:</string>
    <string name="previousDesc">previous</string>
    <string name="nextDesc">next</string>
    <string name="information">This application was created using The Metropolitan Museum of Art API which is free and gives access to all of The Met’s Open Access data and to corresponding high resolution images that are in the public domain.\n\nThe Met Collection API provides access to images in the Museum\'s collection that it believes is in the public domain, and to certain other content that the Museum to which the Museum waives any copyright it might have, which images and content are designated on the Museum\'s website with an Open Access icon and are made available under a CC0 license.</string>
    <string name="contactDeveloper">\n\nFor any bugs or suggestion please contact the developer at:\u0020</string>
    <string name="email">\u0020<u>jellodevs@gmail.com</u></string>
    <string name="instructions">-Long press on image to download\n\n-Single tap image to enlarge\n\n-Press on artist\'s name for more information\n\n-Use next/previous button to navigate through the collection\n\n-Click the share symbol to send the piece\'s name, artist and image URL to friends\n\n-Click on the folder icon to open downloaded images folder</string>
    <string name="updates">-Added option to open downloaded pictures folder.\n-Added favourites button. Users can now save their favorite paintings. Page to view favorites to be implemented\n-Small improvements</string>
    <string name="favoriteAppBar">Save</string>
    <string name="favorites">Favorites</string>
    <string name="quiz">Take Quiz!</string>
    <string name="more_information">More Information</string>
    <string name="share">Share</string>
    <string name="folder">Saved Images</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="noThanks">No, thanks</string>
    <string name="rate">\"Rate \"</string>
    <string name="rateText">If you enjoy using iART, please take a moment to rate it. Thanks for your support!</string>
    <string name="developed_by">Developed by JelloDevs</string>
</resources>
