<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:orderInCategory="1"
        android:icon="@drawable/share"
        app:showAsAction="always"
        android:actionLayout="@layout/toolbar"
        android:title="@string/share" />

    <item
        android:id="@+id/folder"
        android:orderInCategory="2"
        android:icon="@drawable/folder"
        app:showAsAction="always"
        android:actionLayout="@layout/toolbar"
        android:title="@string/folder" />


    <item
        android:id="@+id/favorite"
        android:orderInCategory="3"
        android:icon="@drawable/favorites"
        app:showAsAction="always"
        android:actionLayout="@layout/toolbar"
        android:title="@string/favoriteAppBar" />

    <item
        android:id="@+id/favorites"
        android:orderInCategory="4"
        app:showAsAction="never"
        android:actionLayout="@layout/toolbar"
        android:title="@string/favorites" />

    <!--
    <item
        android:id="@+id/quiz"
        android:orderInCategory="4"
        android:actionLayout="@layout/toolbar"
        android:title="@string/quiz" />
        -->


</menu>